--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.0.7",
@@ -36,9 +37,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^10.2.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue-cli-plugin-mdb": "~2.1.0",
     "vue-cli-plugin-vuetify": "~2.4.0",
