--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "naija-state-local-government": "^1.1.2",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.5",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.2",
-    "vue-toast-notification": "^0.6.2"
+    "vue-toast-notification": "^0.6.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
