--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-VUE_APP_TITLE=Shared Title
-module.exports = {
-  NODE_ENV: '"production"',
-  ROOT_API: '"http://www.example.com/api"',
-  BASE_URL:'"http://52.149.222.131:5009/api/v1/"'
-
-}
+  VUE_APP_BASE_URL=https://agency.paysure.ng/api/v1/
